# FastAPI_nginx_docker_ci-cd_template

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  docker-image.yml
nginx/: Dockerfile  nginx.conf.template
src/: main.py
