[tool.poetry]
name = "fastapi-nginx-docker-ci-cd-template"
version = "0.1.0"
description = ""
authors = ["cnwv <115669384+cnwv@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
